--- a/style.css
+++ b/style.css
@@ -1,20 +1,89 @@
-
 body {
     font-family: 'optima';
-    color: #ffffff;
-    background-color: #606c38;
-  }
+    margin: 0;
+    padding: 0;
+}
 
-  h1{
-    margin-top: 100px;
-    margin-left: 15%;
-  }
-  p{
-    margin-left: 15%;
-  }
-  img{
-    width: 45%;
+nav {
+    width: 200px;
+    height: 100%;
+    background-color: #06171d;
+    position: fixed;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+li {
+    padding: 10px;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: #918c8c;
+    border-radius: 50px;
+    padding: 5px;
+}
+
+#content {
+    margin-left: 220px; /* Adjust as needed */
+    padding: 20px;
+}
+
+#content h2 {
+    color: #333;
+}
+
+h1{
+    margin-left: 25%;
+}
+h3{
+    margin-left: 25.012%;
+    font-weight: 100;
+    margin-right: 50%;
+}
+img{
+    width: 35%;
     height: auto;
-    margin-left: 35%;
-    border-radius: 35px;
+    margin-left: 57%;
+    position: absolute;
+    left: 2%;
+    top: 13%;
+}
+p{
+    margin-left: 59%;
+    margin-right: 7%;
+    margin-top: 0%;
+    text-align: center;
+    position: absolute;
+    float: left;
+}
+figure {
+    padding: 4px;
+    margin: auto;
+  }
+  
+  figcaption {
+    font-style: italic;
+    padding: 2px;
+    text-align: center;
+    margin-left: 59%;
+    margin-right: 7%;
+  }
+  h2{
+    margin-left: 25%;
+    margin-right: 10%;
+    font-weight: 100;
+  }
+  #babyolive{
+    margin-right: 75%;
   }
