--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 nav {
-    width: 200px;
+    width: 230px;
     height: 100%;
     background-color: #06171d;
     position: fixed;
@@ -78,6 +78,7 @@ figure {
     text-align: center;
     margin-left: 59%;
     margin-right: 7%;
+    margin-top: -9%;
   }
   h2{
     margin-left: 25%;
@@ -85,5 +86,5 @@ figure {
     font-weight: 100;
   }
   #babyolive{
-    margin-right: 75%;
+    margin-right: 5%;
   }
